--- a/paper/Makefile
+++ b/paper/Makefile
@@ -1,7 +1,9 @@
 copyAll:
-	cp ../resfiles/tad-drcTinyPen1_JMD/unit1_allTraj_tad-drcTinyPen1_JMD.png figures;
-	cp ../resfiles/tad-drcTinyPen1_JMD/tAD_trajSameSpace_tad-drcTinyPen1_JMD.png figures;
-	cp ../resfiles/tad-drcTinyPen1_JMD/PCA_trajSameSpace_tad-drcTinyPen1_JMD.png figures;
-	cp ../resfiles/tad-drcTinyPen1_JMD/trajDisSpaceOverlap_PCA_tad-drcTinyPen1_JMD.png figures;
-	cp ../resfiles/tad-drcTinyPen1_JMD/validDtiPCA.png figures;
+	cp ../resfiles/tad-drcTinyPen5_JMD/unit*_allTraj.png figures;
+	cp ../resfiles/tad-drcTinyPen5_JMD/dis*.png figures;
+	cp ../resfiles/tad-drcTinyPen5_JMD/trajDisSpaceOverlap_trajDisSpaceOverlap figures;
+	cp  figures;
+	cp  figures;
+	cp  figures;
+	cp  figures;
 
